# EP_sda

./: .gitignore  CMakeLists.txt  Ep.cpp  Ep.h  EpOld.cpp  Processing.py  README.md  SDA.cpp  SDA.h  SDAold.h  convergebig.py  fitness_boxplot.py  generate_plots.py  main.cpp  main.h  test.cpp  testsda  testtt
SQMOut/SQMOut/SQMatch on Seq0 with 1000Gens, 0050PS, 10St,  10TS, 1Muts/: read.me
SQMOut/SQMOut/SQMatch on Seq0 with 1000Gens, 0050PS, 20St,  10TS, 1Muts/: read.me
SQMOut/SQMOut/SQMatch on Seq0 with 1000Gens, 0100PS, 10St,  10TS, 1Muts/: read.me
SQMOut/SQMOut/SQMatch on Seq0 with 1000Gens, 0100PS, 20St,  10TS, 1Muts/: read.me
SQMOut/SQMatch on Seq0 with 1000Gens, 0500PS, 10St,  20TS, 1Muts/: read.me
SQMOut_initial/SQMatch on Seq0 with 1000Gens, 0200PS, 20St,  10TS, 0Muts, 90%CuR, 5CE/: read.me
SQMOut_initial/SQMatch on Seq0 with 1000Gens, 0500PS, 20St,  10TS, 10Muts, 090%CuR, 5CE/: read.me
SQMOut_initial/SQMatch on Seq0 with 1000Gens, 0500PS, 20St,  10TS, 2Muts, 060%CuR, 5CE/: read.me
SQMOut_initial/SQMatch on Seq0 with 1000Gens, 0500PS, 20St,  10TS, 2Muts, 095%CuR, 10CE/: read.me
SQMOut_initial/SQMatch on Seq0 with 1000Gens, 0500PS, 20St,  10TS, 2Muts, 095%CuR, 2CE/: read.me
SQMOut_initial/SQMatch on Seq0 with 1000Gens, 0500PS, 20St,  10TS, 2Muts, 095%CuR, 5CE/: read.me
SQMOut_initial/SQMatch on Seq0 with 1000Gens, 0500PS, 20St,  10TS, 2Muts, 099%CuR, 5CE/: read.me
SQMOut_initial/SQMatch on Seq0 with 1000Gens, 0500PS, 20St,  10TS, 2Muts, 100%CuR, 5CE/: read.me
SQMOut_initial/SQMatch on Seq0 with 3000Gens, 0500PS, 20St,  10TS, 1Muts/: read.me
(+21 files in other folders)
